2007-12-18  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Kernel/v4l2_format.cs, Analog/Video/SlicedVBIFormat.cs: problems
	  with MarshalAs and arrays

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Kernel/v4l2_vbi_format.cs: missing fields added

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Kernel/v4l2_format.cs, Analog/Video/SlicedVBIFormat.cs,
	  Analog/Video/SlicedVBIOutputFormat.cs,
	  Analog/Video/SlicedVBICaptureFormat.cs: sliced vbi capture/output format
	  settings added

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Kernel/v4l2_format.cs, Analog/Video/VBICaptureFormat.cs,
	  Analog/Video/VBIFormat.cs, Analog/Video/VBIOutputFormat.cs: vbi
	  capture/output format settings added

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Video/Rectangle.cs: public constructor missing

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Video/OverlayOutputFormat.cs, Analog/Video/OverlayCaptureFormat.cs,
	  Analog/Video/OverlayFormat.cs: video overlay support added
	* Analog/Video/VideoFormat.cs, Analog/Video/BaseFormat.cs,
	  Analog/Video/VideoCaptureFormat.cs: refactored constructor inheritance

=== Release 0.3 ===

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* ChangeLog, Core/AssemblyInfo.cs: release 0.3 prepared

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Adapter.cs, Analog/Video/BaseFormat.cs,
	  Analog/Video/FormatContainer.cs, Analog/Video/VideoCaptureFormat.cs,
	  Analog/Video/VideoFormat.cs, Analog/Video/VideoOutputFormat.cs,
	  v4l-net.mdp: refactored format setting system

2007-11-23  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Adapter/Adapter.cs, Analog/Adapter/Capability.cs,
	  Analog/Kernel/v4l2_input.cs, Analog/Kernel/v4l2_tuner.cs,
	  Analog/Kernel/v4l2_frequency.cs, Analog/Audio/Input/Input.cs,
	  Analog/Audio/Input/Capability.cs, Analog/Audio/Output/Output.cs,