@@ -1,25 +1,14 @@
 ﻿<UserCombinePreferences version="1.0" filename="/mnt/crypted/coding/mono/v4l-net/trunk/v4l-net.mds">
   <Files>
-    <File name="v4l-net/Analog/Kernel/v4l2_format.cs" line="42" column="5" />
     <File name="Welcome" />
+    <File name="v4l-net/Analog/Adapter.cs" line="1" column="1" />
   </Files>
   <Views>
     <ViewMemento id="ProjectPad">
-      <Node expanded="True">
-        <Node name="v4l-net" expanded="True">
-          <Node name="Analog" expanded="True">
-            <Node name="Kernel" expanded="True">
-              <Node name="v4l2_format.cs" selected="True" />
-            </Node>
-          </Node>
-        </Node>
-      </Node>
+      <Node expanded="True" />
     </ViewMemento>
     <ViewMemento id="ClassPad">
       <Node expanded="True" />
-    </ViewMemento>
-    <ViewMemento id="ConnectionManagerPad">
-      <Node />
     </ViewMemento>
     <ViewMemento id="MonoDevelop.NUnit.TestPad">
       <Node />
